<resources>
    <string name="app_name">MuContact</string>

    <string name="name_hint">Complete Name</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="instrument_hint">Instrument</string>
    <string name="description_hint">Description</string>
    <string name="locationAt_hint">Lotation at</string>
    <string name="loginButton">Login</string>
    <string name="signUpTextView">No account yet? Create one</string>
    <string name="signInTextView">Already a member? Login</string>
    <string name="signUpButton">Create account</string>
    <string name="rewardButton">I want it!</string>
    <string name="sendOrderButton">Send a Order</string>
    <string name="title_activity_main">MuContact!</string>
    <string name="title_home">Home</string>
    <string name="title_publications">Publications</string>
    <string name="title_rewards">Rewards</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_about_reward">About Reward</string>
    <string name="title_activity_about_craftman">About Craftman</string>

    <string name="name">Sample name</string>
    <string name="level">Sample level</string>
    <string name="description">Sample description</string>
    <string name="phone">Sample phone</string>
    <string name="instrument">Sample instrument</string>
    <string name="locationReference">Sample location</string>
    <string name="craftman">Sample craftman</string>
    <string name="title_activity_register">Register New Account</string>
    <string name="title_activity_add_publication">Add Publication</string>

    <string name="action_settings">Settings</string>
    <string name="action_profile">Profile</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="title_activity_about_user">About Me</string>
    <string name="title_activity_edit_publication">"Edit the publication "</string>
    <string name="title_activity_edit_user_profile">Edit my info</string>
    <string name="title_activity_create_contract">Send a Order</string>
    <string name="contracts">My Contracts</string>
    <string name="title_activity_rewards">RewardsActivity</string>

</resources>
