<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/instrumentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instrument"
        android:textStyle="bold"
        android:textSize="48sp"
        android:textColor="@color/colorAccent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/craftmenTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/craftman"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/instrumentTextView"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/craftmenTextView"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/locationReferenceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sendOrderButton"
        app:layout_constraintTop_toBottomOf="@id/descriptionTextView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>